# helloworld

./: CMakeLists.txt  a.txt  compile.c  debugabc.c  lesson01.c  lesson02.c  lesson03.c  lesson04.c  main.c  stringtest.c  struct.c  test.c
common/: common.c
encrypt/: encrypt.c  main.c
file/: b.txt  lesson12.c
include/: common.h  encrypt.h  lesson05.h
lesson07/: lesson07.c
linked_list/: linkedlist.c
malloc/: lesson09.c
my_fun/: lesson05.c  my_fun.c
pointer/: lesson08.c
static_variable/: fun.c  fun1.c  fun2.c  lesson06.c
str/: lesson10.c
struct/: force_align.c  lesson11.c  struct_pointer.c
